# catpls

./: .gitignore  Cargo.toml  flake.nix  insipxgpg  sad_ascii.cat
nix/: rust.nix
src/: bot.rs  config.rs  content.rs  main.rs  rest.rs
src/bot/: identity.rs
