[package]
name = "catpls"
version = "0.1.0"
edition = "2024"
description = "catpls.eth bot"

[dependencies]
color-eyre = "0.6.3"
hex = "0.4.3"
prost = "0.13.5"
rand = "0.9.1"
ring = "0.17.14"
serde = "1.0.219"
serde_derive = "1.0.219"
ureq = "3.0.11"
uuid = { version = "1.16.0", features = ["v4"] }
warp = { version = "0.3.7", features = ["tls"] }
xmtp_mls = { git = "https://github.com/xmtp/libxmtp", branch = "main" }
xmtp_proto = { git = "https://github.com/xmtp/libxmtp", branch = "main" }
aws-sdk-s3 = "1.83"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1" }
tracing = "0.1.41"

[dev-dependencies]
tokio = "1.44"
